add auth-with password
